# obs-plugin-using-browser-demo

./: .gitignore  CMakeLists.txt  buildspec.json  vcpkg.json
.github/scripts/: .build.zsh
src/: BrowserDialog.cpp  BrowserDialog.hpp  DemoObject.cpp  DemoObject.hpp  client.js  obs-browser.cpp  obs-browser.hpp  plugin-main.cpp  uuid.hpp
streamelements/: StreamElementsBrowserWidget.cpp  StreamElementsBrowserWidget.hpp  StreamElementsBrowserWidgetManager.cpp  StreamElementsWidgetManager.cpp  StreamElementsWorkerManager.cpp
